Add NUnit integration tests

--- a/TestingWebApi.Core/TestingWebApi.Core.csproj
+++ b/TestingWebApi.Core/TestingWebApi.Core.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <InternalsVisibleTo Include="TestingWebApi.IntegrationTests" />
+        <InternalsVisibleTo Include="TestingWebApi.NUnitIntegrationTests" />
     </ItemGroup>
 
 </Project>
