Add XUnit integration tests

--- a/TestingWebApi.Core/TestingWebApi.Core.csproj
+++ b/TestingWebApi.Core/TestingWebApi.Core.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <InternalsVisibleTo Include="TestingWebApi.IntegrationTests" />
         <InternalsVisibleTo Include="TestingWebApi.NUnitIntegrationTests" />
+        <InternalsVisibleTo Include="TestingWebApi.XUnitIntegrationTests" />
     </ItemGroup>
 
 </Project>
